workouts kunnen worden opgeslagen in memory
